# MarchingCubes

./: CMakeLists.txt  README.md  imgui.ini  main.cpp
cmake/: CopyFile.cmake
res/data/: MarchingCubesData.h
src/: IndexBuffer.cpp  IndexBuffer.h  Renderer.cpp  Renderer.h  Shader.cpp  Shader.h  Texture.cpp  Texture.h  VertexArray.cpp  VertexArray.h  VertexBuffer.cpp  VertexBuffer.h  VertexBufferLayout.cpp  VertexBufferLayout.h
src/helper/: Render.h
src/res/shaders/: Basic.shader
